--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -39,6 +39,36 @@
             }
           }
           max-width : 50%;
+          &-inner{
+            position: relative;
+            .img-hover{
+              position: absolute;
+              width: calc(100% - 16px);
+              height: calc(100% - 30px);
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background: black;
+              opacity: 0;
+              transition: opacity 0.3s;
+
+              // delete
+              //background: black;
+              //opacity: 0.7;
+              //p{
+              //  color: white;
+              //}
+              &:hover{
+                background: black;
+                opacity: 0.7;
+                transition: opacity 0.3s linear;
+                p{
+                  color: white;
+                }
+              }
+            }
+          }
+
         }
 
       }
