--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -129,6 +129,11 @@
         display: none;
       }
     }
+    .logo{
+      img{
+        max-height: 70px;
+      }
+    }
   }
   .hamburger-box{
     display: none;
