--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,61 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="app">
+<div class="app" *ngIf="!isLoading">
   <app-header></app-header>
   <app-projects *ngIf="router.url === '/'"></app-projects>
   <router-outlet></router-outlet>
 </div>
+<div class="sk-three-bounce">
+  <div class="sk-child sk-bounce1"></div>
+  <div class="sk-child sk-bounce2"></div>
+  <div class="sk-child sk-bounce3"></div>
+</div>
+<!--pre load-->
+<img src="../../../assets/projects/&learning.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/stp.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/moha.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/tattoo.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/booky.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/gajol.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/valentines.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/arla.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/edc.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/poster-challenge.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/spotify.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/imread.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/logos.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
 
+<img src="../../../assets/projects/otis.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/pop.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
+<img src="../../../assets/projects/book.jpg"
+     (load)="imgLoaded()"
+     style="display: none;">
