--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -12,6 +12,7 @@
 
   @include breakpoint(desktop) {
     .project-holder{
+      margin-top: 50px;
       .img-holder{
         display: flex;
         flex-wrap: wrap;
@@ -48,7 +49,7 @@
               display: flex;
               justify-content: center;
               align-items: center;
-              background: black;
+              background: #464646;
               opacity: 0;
               transition: opacity 0.3s;
 
@@ -59,8 +60,9 @@
               //  color: white;
               //}
               &:hover{
-                background: black;
-                opacity: 0.7;
+                background: #464646;
+                opacity: 0.9;
+
                 transition: opacity 0.3s linear;
                 p{
                   color: white;
@@ -77,6 +79,8 @@
         display: none;
       }
       .languages{
+        position: absolute;
+
         display: flex;
         cursor: pointer;
         //border: 1px solid red;
@@ -85,7 +89,9 @@
         justify-content: space-between;
         //margin-right: 20px;
         font-size: 0.9rem;
-        margin-left: calc(100% - 43px);
+        //margin-left: calc(100% - 43px);
+        right: 0;
+        top: 0;
         p{
           &:hover{
             font-weight: 500;
