--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -4,7 +4,9 @@
   </div>
   <div class="language-burger">
     <div class="languages">
-      <p (click)="setLanguage('en')" class="en">en</p> <span class="line">|</span> <p (click)="setLanguage('pl')" class="pl">pl</p>
+      <p (click)="setLanguage('en')" class="en" [ngClass]="this.local.getItem('lan') === 'en' ? 'selected' : ''">en</p>
+      <span class="line">|</span>
+      <p (click)="setLanguage('pl')" class="pl"[ngClass]="this.local.getItem('lan') === 'pl' ? 'selected' : ''" >pl</p>
     </div>
     <button class="hamburger hamburger--collapse"
             (click)="openBurger()" [ngClass]="navBurger ? 'is-active' : ''"
