--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -51,6 +51,11 @@
       justify-content: space-between;
       margin-right: 20px;
       font-size: 0.9rem;
+      p{
+        &.selected{
+          font-weight: 500;
+        }
+      }
 
     }
   }
