--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -1,7 +1,8 @@
 <div class="contact">
   <div class="languages">
-    <p (click)="setLanguage('en')" class="en">en</p> <span class="line">|</span>
-    <p (click)="setLanguage('pl')" class="pl">pl</p>
+    <p (click)="setLanguage('en')" class="en" [ngClass]="this.local.getItem('lan') === 'en' ? 'selected' : ''">en</p>
+    <span class="line">|</span>
+    <p (click)="setLanguage('pl')" class="pl"[ngClass]="this.local.getItem('lan') === 'pl' ? 'selected' : ''" >pl</p>
   </div>
 
   <div class="contact-info">
