--- a/src/assets/loader/loader.scss
+++ b/src/assets/loader/loader.scss
@@ -10,13 +10,37 @@
  */
 .sk-three-bounce {
   //margin: 40px auto;
-  width: 80px;
-  min-width: calc(100vw - 50px);
-  min-height: calc(100vh);
+  width: calc(100vw - 50px);
+  min-height: calc(100vh - 50px);
+  max-width: 1300px;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.subPage {
+  min-height: calc(100vh - 120px);
+}
+
+//desktop
+@media (min-width: 64em){
+  .subPage {
+    min-height: calc(100vh - 50px);
+    width: calc(100vw - 300px);
+    max-width: 1000px;
+
+  }
+}
+
+
+//end desktop
+
+
+.sk-three-bounce p{
+  color: #bababa;
+  font-size: 0.9rem;
 }
 .sk-three-bounce .sk-child {
   width: 20px;
