+ add fixed nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,12 +20,7 @@
 <img src="../../../assets/projects/stp.jpg"
      (load)="imgLoaded()"
      style="display: none;">
-<img src="../../../assets/projects/moha.jpg"
-     (load)="imgLoaded()"
-     style="display: none;">
-<img src="../../../assets/projects/tattoo.jpg"
-     (load)="imgLoaded()"
-     style="display: none;">
+
 <img src="../../../assets/projects/booky.jpg"
      (load)="imgLoaded()"
      style="display: none;">
@@ -57,9 +52,16 @@
 <img src="../../../assets/projects/otis.jpg"
      (load)="imgLoaded()"
      style="display: none;">
-<img src="../../../assets/projects/pop.jpg"
-     (load)="imgLoaded()"
-     style="display: none;">
-<img src="../../../assets/projects/book.jpg"
-     (load)="imgLoaded()"
-     style="display: none;">
+<!--<img src="../../../assets/projects/moha.jpg"-->
+<!--     (load)="imgLoaded()"-->
+<!--     style="display: none;">-->
+<!--<img src="../../../assets/projects/pop.jpg"-->
+<!--     (load)="imgLoaded()"-->
+<!--     style="display: none;">-->
+
+<!--<img src="../../../assets/projects/book.jpg"-->
+<!--     (load)="imgLoaded()"-->
+<!--     style="display: none;">-->
+<!--<img src="../../../assets/projects/tattoo.jpg"-->
+<!--     (load)="imgLoaded()"-->
+<!--     style="display: none;">-->
