--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -32,26 +32,6 @@
                [routerLink]="['/project/stp']"></div>
       </div>
 
-      <div class="img-holder--inner" *ngIf="filter === 'visual' || filter === 'any'"> <!--visual identity-->
-        <div class="img-holder--inner-inner ">
-          <div class="img-hover" [routerLink]="['/project/moha']">
-            <p>{{content['moha']}}</p>
-          </div>
-          <img src="../../../assets/projects/moha.jpg"
-               alt="moha"
-               [routerLink]="['/project/moha']"></div>
-      </div>
-
-      <div class="img-holder--inner" *ngIf="filter === 'visual' || filter === 'any' || filter === 'uiux'">   <!--visal identity-->
-        <div class="img-holder--inner-inner ">
-          <div class="img-hover" [routerLink]="['/project/tattoo']">
-            <p>{{content['tattoo']}}</p>
-          </div>
-          <img src="../../../assets/projects/tattoo.jpg"
-               alt="tattoo"
-               [routerLink]="['/project/tattoo']"></div>
-      </div>
-
       <div class="img-holder--inner" *ngIf="filter === 'webDesign' || filter === 'any' || filter === 'uiux'">    <!--web design-->
         <div class="img-holder--inner-inner odd" >
           <div class="img-hover" [routerLink]="['/project/booky']">
@@ -156,28 +136,46 @@
                alt="otis"
                [routerLink]="['/project/otis']"></div>
       </div>
+      <!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'visual' || filter === 'any'"> &lt;!&ndash;visual identity&ndash;&gt;-->
+      <!--        <div class="img-holder&#45;&#45;inner-inner ">-->
+      <!--          <div class="img-hover" [routerLink]="['/project/moha']">-->
+      <!--            <p>{{content['moha']}}</p>-->
+      <!--          </div>-->
+      <!--          <img src="../../../assets/projects/moha.jpg"-->
+      <!--               alt="moha"-->
+      <!--               [routerLink]="['/project/moha']"></div>-->
+      <!--      </div>-->
 
-      <div class="img-holder--inner" *ngIf="filter === 'webDesign' || filter === 'any' || filter === 'uiux'" ><!--web desing-->
-        <div class="img-holder--inner-inner ">
-          <div class="img-hover" [routerLink]="['/project/pop']">
-            <p>{{content['pop']}}</p>
-          </div>
-          <img src="../../../assets/projects/pop.jpg"
-               alt="pop"
-               [routerLink]="['/project/pop']"></div>
-      </div>
+      <!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'visual' || filter === 'any' || filter === 'uiux'">   &lt;!&ndash;visal identity&ndash;&gt;-->
+      <!--        <div class="img-holder&#45;&#45;inner-inner ">-->
+      <!--          <div class="img-hover" [routerLink]="['/project/tattoo']">-->
+      <!--            <p>{{content['tattoo']}}</p>-->
+      <!--          </div>-->
+      <!--          <img src="../../../assets/projects/tattoo.jpg"-->
+      <!--               alt="tattoo"-->
+      <!--               [routerLink]="['/project/tattoo']"></div>-->
+      <!--      </div>-->
+<!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'webDesign' || filter === 'any' || filter === 'uiux'" >&lt;!&ndash;web desing&ndash;&gt;-->
+<!--        <div class="img-holder&#45;&#45;inner-inner ">-->
+<!--          <div class="img-hover" [routerLink]="['/project/pop']">-->
+<!--            <p>{{content['pop']}}</p>-->
+<!--          </div>-->
+<!--          <img src="../../../assets/projects/pop.jpg"-->
+<!--               alt="pop"-->
+<!--               [routerLink]="['/project/pop']"></div>-->
+<!--      </div>-->
 
 
 
-      <div class="img-holder--inner" *ngIf="filter === 'print' || filter === 'any'">   <!--print-->
-        <div class="img-holder--inner-inner ">
-          <div class="img-hover" [routerLink]="['/project/book']">
-            <p>{{content['book']}}</p>
-          </div>
-          <img src="../../../assets/projects/book.jpg"
-               alt="book"
-               [routerLink]="['/project/book']"></div>
-      </div>
+<!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'print' || filter === 'any'">   &lt;!&ndash;print&ndash;&gt;-->
+<!--        <div class="img-holder&#45;&#45;inner-inner ">-->
+<!--          <div class="img-hover" [routerLink]="['/project/book']">-->
+<!--            <p>{{content['book']}}</p>-->
+<!--          </div>-->
+<!--          <img src="../../../assets/projects/book.jpg"-->
+<!--               alt="book"-->
+<!--               [routerLink]="['/project/book']"></div>-->
+<!--      </div>-->
   </div>
 
   </div>
