--- a/src/app/pages/contact/contact.scss
+++ b/src/app/pages/contact/contact.scss
@@ -18,6 +18,7 @@
 @include breakpoint(desktop) {
 
   .contact{
+    margin-left: 260px;
     padding-top: 145px;
     //position: relative;
     .languages{
