--- a/src/app/pages/valentines/valentines.component.html
+++ b/src/app/pages/valentines/valentines.component.html
@@ -1,4 +1,4 @@
-<div class="project-page valentines" *ngIf="!loading">
+<div class="project-page valentines" *ngIf="!loading" [ngClass]="animate ? 'show' : ''">
   <div class="line"></div>
 
   <h3>{{'projects.valentines.h1' | translate}}
