--- a/src/app/components/projects/projects.html
+++ b/src/app/components/projects/projects.html
@@ -9,44 +9,41 @@
 
     <app-sorting (filter)="receiveMessage($event)" class="sorting"></app-sorting>
     <div class="img-holder">
-      <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any' || filter === 'uiux'">
-        <div class="img-holder--inner-inner  first">
-          <div class="img-hover" [routerLink]="['/&learning']">
-            <p>{{content['&learning']}}</p>
-          </div>
-          <!--concet-->
-          <img src="../../../assets/projects/&learning.jpg"
-               alt="andl"
-               [routerLink]="['&learning']">
-        </div>
-
-      </div>
       <div class="img-holder--inner" *ngIf="filter === 'games' || filter === 'any' || filter === 'uiux'">
         <div class="img-holder--inner-inner odd">
           <div class="img-hover" [routerLink]="['/stp']">
-            <p>{{content['stp']}}</p>
+            <div>
+              <h1>{{'projects.hover.stp.h1' | translate}}</h1>
+              <p>{{'projects.hover.stp.p' | translate}}</p>
+            </div>
           </div>
           <!--games-->
           <img src="../../../assets/projects/stp.jpg"
                alt="stp"
                [routerLink]="['/stp']"></div>
       </div>
-
-<!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'webDesign' || filter === 'any' || filter === 'uiux'">    &lt;!&ndash;web design&ndash;&gt;-->
-<!--        <div class="img-holder&#45;&#45;inner-inner odd" >-->
-<!--          <div class="img-hover" [routerLink]="['/booky']">-->
-<!--            <p>{{content['booky']}}</p>-->
-<!--          </div>-->
-<!--          <img src="../../../assets/projects/booky.jpg"-->
-<!--               alt="booky"-->
-<!--               [routerLink]="['/project/booky']"></div>-->
-<!--      </div>-->
-
+      <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any' || filter === 'uiux'">
+        <div class="img-holder--inner-inner  first">
+          <div class="img-hover" [routerLink]="['/&learning']">
+            <div>
+              <h1>{{'projects.hover.learning.h1' | translate}}</h1>
+              <p>{{'projects.hover.learning.p' | translate}}</p>
+            </div>
+          </div>
+          <!--concet-->
+          <img src="../../../assets/projects/&learning.jpg"
+               alt="andl"
+               [routerLink]="['&learning']">
+        </div>
+      </div>
 
       <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any'|| filter === 'uiux'">  <!--conpetc-->
         <div class="img-holder--inner-inner " >
           <div class="img-hover" [routerLink]="['/gajol']">
-            <p>{{content['gajol']}}</p>
+            <div>
+              <h1>{{'projects.hover.gajol.h1' | translate}}</h1>
+              <p>{{'projects.hover.gajol.p' | translate}}</p>
+            </div>
           </div>
           <img src="../../../assets/projects/gajol.jpg"
                alt="gajol"
@@ -56,7 +53,10 @@
       <div class="img-holder--inner" *ngIf="filter === 'games' || filter === 'any'">   <!--games-->
         <div class="img-holder--inner-inner odd">
           <div class="img-hover" [routerLink]="['/valentines']">
-            <p>{{content['valentines']}}</p>
+            <div>
+              <h1>{{'projects.hover.valentines.h1' | translate}}</h1>
+              <p>{{'projects.hover.valentines.p' | translate}}</p>
+            </div>
           </div>
           <img src="../../../assets/projects/valentines.jpg"
                alt="valentines"
@@ -67,7 +67,10 @@
         <div class="img-holder--inner-inner odd second">
           <!--concept-->
           <div class="img-hover" [routerLink]="['/arla']">
-            <p>{{content['arla']}}</p>
+            <div>
+              <h1>{{'projects.hover.arla.h1' | translate}}</h1>
+              <p>{{'projects.hover.arla.p' | translate}}</p>
+            </div>
           </div>
           <img src="../../../assets/projects/arla.jpg"
                alt="arla"
@@ -78,7 +81,10 @@
       <div class="img-holder--inner" *ngIf="filter === 'concept' || filter === 'any' || filter === 'uiux'">    <!--concept-->
         <div class="img-holder--inner-inner ">
           <div class="img-hover" [routerLink]="['/edc']">
-            <p>{{content['edc']}}</p>
+            <div>
+              <h1>{{'projects.hover.edc.h1' | translate}}</h1>
+              <p>{{'projects.hover.edc.p' | translate}}</p>
+            </div>
           </div>
           <img src="../../../assets/projects/edc.jpg"
                alt="edc"
@@ -88,27 +94,23 @@
       <div class="img-holder--inner" *ngIf="filter === 'print' || filter === 'any'"> <!--print-->
         <div class="img-holder--inner-inner odd">
           <div class="img-hover" [routerLink]="['/project/poster-challenge']">
-            <p>{{content['poster-challenge']}}</p>
+            <div>
+              <h1>{{'projects.hover.poster.h1' | translate}}</h1>
+              <p>{{'projects.hover.poster.p' | translate}}</p>
+            </div>
           </div>
           <img src="../../../assets/projects/poster-challenge.jpg"
                alt=posterChallenge
                [routerLink]="['/project/poster-challenge']"></div>
       </div>
 
-<!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'concept' || filter === 'any' || filter === 'uiux'">   &lt;!&ndash;conpect&ndash;&gt;-->
-<!--        <div class="img-holder&#45;&#45;inner-inner ">-->
-<!--          <div class="img-hover" [routerLink]="['/project/spotify']">-->
-<!--            <p>{{content['spotify']}}</p>-->
-<!--          </div>-->
-<!--          <img src="../../../assets/projects/spotify.jpg"-->
-<!--               alt="spotify"-->
-<!--               [routerLink]="['/project/spotify']"></div>-->
-<!--      </div>-->
-
       <div class="img-holder--inner" *ngIf="filter === 'any' || filter === 'uiux'">   <!--ux-->
         <div class="img-holder--inner-inner odd">
           <div class="img-hover" [routerLink]="['/project/imread']">
-            <p>{{content['imread']}}</p>
+            <div>
+              <h1>{{'projects.hover.imaread.h1' | translate}}</h1>
+              <p>{{'projects.hover.imaread.p' | translate}}</p>
+            </div>
           </div>
           <img src="../../../assets/projects/imread.jpg"
                alt="imread"
@@ -118,7 +120,10 @@
       <div class="img-holder--inner" *ngIf="filter === 'logo' || filter === 'any'"> <!--logo-->
         <div class="img-holder--inner-inner odd">
           <div class="img-hover" [routerLink]="['/project/logos']">
-            <p>{{content['logos']}}</p>
+            <div>
+              <h1>{{'projects.hover.logos.h1' | translate}}</h1>
+              <p></p>
+            </div>
           </div>
           <img src="../../../assets/projects/logos.jpg"
                alt="fronts"
@@ -130,52 +135,15 @@
       <div class="img-holder--inner" *ngIf="filter === 'print' || filter === 'any'">    <!--print-->
         <div class="img-holder--inner-inner odd">
           <div class="img-hover" [routerLink]="['/project/otis']">
-            <p>{{content['otis']}}</p>
+            <div>
+              <h1>{{'projects.hover.otis.h1' | translate}}</h1>
+              <p>{{'projects.hover.otis.p' | translate}}</p>
+            </div>
           </div>
           <img src="../../../assets/projects/otis.jpg"
                alt="otis"
                [routerLink]="['/project/otis']"></div>
       </div>
-      <!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'visual' || filter === 'any'"> &lt;!&ndash;visual identity&ndash;&gt;-->
-      <!--        <div class="img-holder&#45;&#45;inner-inner ">-->
-      <!--          <div class="img-hover" [routerLink]="['/project/moha']">-->
-      <!--            <p>{{content['moha']}}</p>-->
-      <!--          </div>-->
-      <!--          <img src="../../../assets/projects/moha.jpg"-->
-      <!--               alt="moha"-->
-      <!--               [routerLink]="['/project/moha']"></div>-->
-      <!--      </div>-->
-
-      <!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'visual' || filter === 'any' || filter === 'uiux'">   &lt;!&ndash;visal identity&ndash;&gt;-->
-      <!--        <div class="img-holder&#45;&#45;inner-inner ">-->
-      <!--          <div class="img-hover" [routerLink]="['/project/tattoo']">-->
-      <!--            <p>{{content['tattoo']}}</p>-->
-      <!--          </div>-->
-      <!--          <img src="../../../assets/projects/tattoo.jpg"-->
-      <!--               alt="tattoo"-->
-      <!--               [routerLink]="['/project/tattoo']"></div>-->
-      <!--      </div>-->
-<!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'webDesign' || filter === 'any' || filter === 'uiux'" >&lt;!&ndash;web desing&ndash;&gt;-->
-<!--        <div class="img-holder&#45;&#45;inner-inner ">-->
-<!--          <div class="img-hover" [routerLink]="['/project/pop']">-->
-<!--            <p>{{content['pop']}}</p>-->
-<!--          </div>-->
-<!--          <img src="../../../assets/projects/pop.jpg"-->
-<!--               alt="pop"-->
-<!--               [routerLink]="['/project/pop']"></div>-->
-<!--      </div>-->
-
-
-
-<!--      <div class="img-holder&#45;&#45;inner" *ngIf="filter === 'print' || filter === 'any'">   &lt;!&ndash;print&ndash;&gt;-->
-<!--        <div class="img-holder&#45;&#45;inner-inner ">-->
-<!--          <div class="img-hover" [routerLink]="['/project/book']">-->
-<!--            <p>{{content['book']}}</p>-->
-<!--          </div>-->
-<!--          <img src="../../../assets/projects/book.jpg"-->
-<!--               alt="book"-->
-<!--               [routerLink]="['/project/book']"></div>-->
-<!--      </div>-->
   </div>
 
   </div>
