--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -73,21 +73,33 @@
               background: #464646;
               opacity: 0;
               transition: opacity 0.3s;
-
-              // delete
-              //background: black;
-              //opacity: 0.7;
-              //p{
-              //  color: white;
-              //}
+              div{
+                display: flex;
+                padding: 44px 87px 41px 27px;
+                justify-content: space-between;
+                align-items: flex-start;
+                flex-direction: column;
+                height: calc(100% - 85px);
+                width: calc(100% - 114px);
+              }
+              h1{
+                margin: 0;
+                font-size: 26px;
+                color: #FFFFFF;
+                font-weight: 600;
+              }
+              p{
+                margin: 0;
+                font-weight: 300;
+                font-size: 14px;
+                color: white;
+              }
               &:hover{
+
                 background: #464646;
                 opacity: 0.9;
-
                 transition: opacity 0.3s linear;
-                p{
-                  color: white;
-                }
+
               }
             }
           }
