--- a/src/app/pages/imaread/imaread.component.html
+++ b/src/app/pages/imaread/imaread.component.html
@@ -1,4 +1,4 @@
-<div class="project-page">
+<div class="project-page imaread" [ngClass]="animate ? 'show' : ''" *ngIf="!loading">
   <div class="line"></div>
   <img src="assets/projects/imread/logo.png" class="logo">
   <h3>{{'projects.imread.h1' | translate}}</h3>
@@ -40,5 +40,28 @@
   <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
 
 </div>
+
+<div class="project-page-loader sk-three-bounce subPage" *ngIf="loading">
+  <div>
+    <div class="sk-child sk-bounce1"></div>
+    <div class="sk-child sk-bounce2"></div>
+    <div class="sk-child sk-bounce3"></div>
+  </div>
+  <p>loading</p>
+</div>
+<img src="assets/projects/imread/logo.png" class="logo" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic1.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic2.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic3.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic4.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic5.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic6.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic7.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic8.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic9.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic10.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic11.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic12.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/pic13.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
 
 <!--todo-->
