--- a/src/app/pages/learning/learning.component.html
+++ b/src/app/pages/learning/learning.component.html
@@ -1,4 +1,4 @@
-<div class="project-page learning" *ngIf="!loading">
+<div class="project-page learning" *ngIf="!loading" [ngClass]="animate ? 'show' : ''">
   <div class="line"></div>
   <img src="assets/projects/learning/logo.png" class="logo">
   <h3>{{'projects.learning.h1' | translate}}</h3>
